backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ddis-service
spec:
  type: ClusterIP
  selector:
    app: ddis
  ports:
    - port: 8080
      targetPort: 8080
