ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx  
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ddis-frontend-service
                port:
                  number: 80
          - path: /ddis(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ddis-service
                port:
                  number: 8080
